# moljax

./: .gitignore  CITATION.cff  README.md  REPRODUCE.md  environment.yml  pyproject.toml
benchmarks/: benchmark_diffrax_work_precision.py  benchmark_gmres_sweep.py  benchmark_gray_scott.py  benchmark_jit_speedup.py  benchmark_method_comparison.py  benchmark_numpy_jax_pytorch.py  benchmark_reactor_vs_diffrax.py  benchmark_scaling.py  benchmark_solver_comparison.py  benchmark_tubular_reactor.py  benchmark_utils.py  benchmark_vs_diffrax.py  benchmark_vs_scipy.py  generate_convergence_figure.py  generate_paper_figures.py
benchmarks/julia/: benchmark_cpu_gpu.jl  benchmark_diffeq.jl  benchmark_scaling.jl  fft_cn_solver.jl  fft_cn_solver_gpu.jl  results_diffeq_comparison.json
benchmarks/results/: 3d_feasibility.json  ablation.json  adjoint_grad_sanity.json  bc_matrix.json  da_pe_robustness.json  fft_vs_sparse.json  gmres_sweep.json  gpu_memory_scaling.json  gray_scott.json  gray_scott_diffrax.json  gray_scott_moljax.json  imex_vs_fullimplicit_map.json  iter_vs_dim.json  iter_vs_grid.json  jit_speedup.json  jvp_vs_fd_sweep.json  method_comparison_results.json  newton_policy_ablation.json  precision_fp32_fp64.json  precond_variants.json  rannacher_startup.json  reaction_dominant.json  reactor_results.json  scaling.json  scipy_comparison.json  solver_comparison.json
benchmarks/sisc/: bench_3d_feasibility.py  bench_adjoint_grad_sanity.py  bench_bc_matrix.py  bench_da_pe_robustness.py  bench_gpu_memory_scaling.py  run_sisc_suite.sh  (+11 more)
examples/: acoustics_1d.py  advdiff_multispecies.py  gray_scott_2d.py
moljax/: __init__.py
output/: gray_scott_comparison.npz
tests/: test_2nd_order_example.py  test_adaptive_tuning_quality.py  test_autotuner_scaling.py  test_bc.py  test_compare_diffusion.py  test_dt_policy.py  test_fft_nilt_bridge.py  test_fft_nonperiodic.py  test_fft_operators.py  test_fft_solver.py  test_hermitian_projection.py  test_imex.py  test_integrators.py  test_jit_kernels.py  test_nilt_pairs.py  test_nilt_uniform_vs_batch.py  test_nk.py  test_operators.py  test_operators_ho.py  test_option_a_vs_b.py  test_spectral_smoothing.py  test_variable_coeff.py
(+32 files in other folders)
